--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
         "start": "node ./index.js",
         "watch": "nodemon ./index.js",
         "lint": "eslint .",
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "test": "mocha --recursive test",
+        "bump-version": "npm version patch"
     },
     "repository": {
         "type": "git",
